--- a/.github/workflows/spam_otomatis.yaml
+++ b/.github/workflows/spam_otomatis.yaml
@@ -2,7 +2,7 @@ name: Kirim API Req per 5 Menit
 
 on:
   schedule:
-    - cron: */4 * * * *
+    - cron: '*/4 * * * *'
   push:
     branch: "main"
   
