--- a/.github/workflows/spam_otomatis.yaml
+++ b/.github/workflows/spam_otomatis.yaml
@@ -7,14 +7,18 @@ on:
     branch: "main"
   
 jobs:
-  build:
+  send_req:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 14, 16, 18 ]
+    name: Node ${{ matrix.node }} Send API
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js 18
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4.0.2
       with:
-        node-version: '18'
+          node-version: ${{ matrix.node }}
         cache: 'npm'
     - run: npm ci
-    - run: npm test
+    - run: npm send
