--- a/.github/workflows/spam_otomatis.yaml
+++ b/.github/workflows/spam_otomatis.yaml
@@ -1,8 +1,8 @@
-name: Kirim API Req per 5 Menit
+name: Kirim API Req per 10 Menit
 
 on:
   schedule:
-    - cron: '*/4 * * * *'
+    - cron: '*/10 * * * *'
   push:
     branch: "main"
   
@@ -15,10 +15,10 @@ jobs:
     name: Node ${{ matrix.node }} Send API
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 18
+      - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4.0.2
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - run: npm ci
-      - run: npm send
+      - run: npm run send
